# dotfiles

./: CLAUDE.md  README.md  bootstrap.sh  init.lua  p10k.zsh  uninstall.sh  zprofile  zshrc
claude/: CLAUDE.md  settings.json
claude/commands/: git_commit.md
claude/rules/: cv-ai.md  firmware.md  general-python.md
claude/skills/beamer-presentation/: SKILL.md
claude/skills/commit/: SKILL.md
claude/skills/merge/: SKILL.md
claude/skills/project-plan/: SKILL.md
claude/skills/review/: SKILL.md
claude/skills/review/references/: checklists.md
mcp/pdf_snip/: .gitignore  README.md  core.py  gui.py  mcp_config_snippet.json  pyproject.toml  server.py
mcp/pdf_snip/gui_assets/: app.css  app.js  index.html
mcp/pdf_snip/tests/: conftest.py  test_core.py  test_gui_epoch.py
nvim/: init.lua
nvim/lua/: local.lua
templates/clangd/: 80186.yaml  default.yaml
tmux/: tmux.conf
zsh/: zshrc  zshrc.local
