[project]
name = "pdf-snip"
version = "0.1.0"
description = "MCP server: snip a region of a PDF page (figure, table, equation, anything) to PNG, with a browser GUI for the user to confirm the bounding box."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.27.0",
    "pymupdf>=1.27.2.3",
]

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pytest>=9.0.3",
]

# mypy needs the project venv to resolve imports (fitz, mcp), so run it
# as `uv run mypy .` rather than `uvx mypy .`.
[tool.mypy]

[[tool.mypy.overrides]]
# PyMuPDF ships no type stubs (no py.typed marker); silence only its
# import errors so real type errors stay visible.
module = ["fitz", "fitz.*"]
ignore_missing_imports = true
